sealos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longqing-remote-trade
  namespace: ns-mzyybqj8
  labels:
    app: longqing-remote-trade
    cloud.sealos.io/app-deploy-manager: longqing-remote-trade
    cloud.sealos.io/app-deploy-manager-domain: longqing-remote-trade
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: longqing-remote-trade.sealoshzh.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longqing-remote-trade
                port:
                  number: 80
  tls:
    - hosts:
        - longqing-remote-trade.sealoshzh.site
      secretName: wildcard-cert
